--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -7,6 +7,7 @@
 <br>
 <div class="card">
   <h5 class="card-header">Restaurant Info</h5>
+  <img class="card-img-top" src="{{restaurant.logo.url}}" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">{{restaurant.name}}</h5>
     <p class="card-text">{{restaurant.description|linebreaks}}</p>
