--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -8,9 +8,12 @@
     {% for restaurant in restaurants %}
     <div class="col-md-4">
         <div class="card my-card">
-          <div class="card-body">
-            <h5 class="card-title">{{restaurant.name}}</h5>
-            <p class="card-text">{{restaurant.description|truncatechars:25}}</p>
+        {% if restaurant.logo %}
+          <img class="card-img-top" src="{{restaurant.logo.url}}" alt="Card image cap"/>
+        {% endif %}
+            <div class="card-body">
+              <h5 class="card-title">{{restaurant.name}}</h5>
+              <p class="card-text">{{restaurant.description|truncatechars:25}}</p>
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item text-center">
